--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
-  "name": "vinqp-web",
+  "name": "lockscreen",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.23",
+    "momentjs": "^2.0.0",
+    "prop-types": "^15.7.2",
     "react": "^16.8.4",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.8.4",
-    "react-scripts": "2.1.5"
+    "react-moment": "^0.8.4",
+    "react-pose": "^4.0.8",
+    "react-scripts": "2.1.5",
+    "styled-components": "^4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -21,5 +29,11 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.12.4"
+  }
 }
